--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
     "react-tabs": "^6.1.0",
+    "react-toastify": "^11.0.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.15.10"
   },
