--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
+    "react-select": "^5.9.0",
     "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.3",
     "sort-by": "^1.2.0",
