--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@stripe/stripe-js": "^5.5.0",
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "firebase": "^11.1.0",
     "framer-motion": "^12.0.0",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
@@ -34,7 +36,7 @@
     "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.3",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.15.10"
+    "sweetalert2": "^11.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
